# smart-portfolio-core

./: LICENSE  README.md  pyproject.toml
src/: modelos.py  portafolio.py  reportes.py
tests/: conftest.py  test_models.py  test_portafolio.py  test_reportes.py
