[tool.poetry]
name = "smart-portfolio-core"
version = "0.1.0"
description = "Core logic for smart portfolio"
authors = ["NicolÃƒÂ¡s Romero <nicoromero02@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_portfolio_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
